fixed findbugs warnings and regular warnings